--- a/Exercice10/index.html
+++ b/Exercice10/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Exercice 10</title>
+    <script defer src="index.js"></script>
 </head>
 <body>
     <h1>Mon premier Site Web</h1>
